raven/src/main/antlr/in.handyman.raven/compiler/RavenParser.java
// Generated from Raven.g4 by ANTLR 4.10.1

package in.handyman.raven.compiler;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RavenParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, NON_ZERO_DIGIT=104, STRING=105, CRLF=106, Operator=107, 
		WS=108, COMMENT=109, LINE_COMMENT=110, NUMBER=111;
	public static final int
		RULE_process = 0, RULE_tryClause = 1, RULE_finallyClause = 2, RULE_catchClause = 3, 
		RULE_action = 4, RULE_multitude = 5, RULE_copyData = 6, RULE_transform = 7, 
		RULE_loadCsv = 8, RULE_abort = 9, RULE_callProcess = 10, RULE_forkProcess = 11, 
		RULE_spawnProcess = 12, RULE_dogLeg = 13, RULE_startProcess = 14, RULE_assign = 15, 
		RULE_dropFile = 16, RULE_restApi = 17, RULE_restPart = 18, RULE_exportCsv = 19, 
		RULE_importCsvToDB = 20, RULE_extractTAR = 21, RULE_createTAR = 22, RULE_createDirectory = 23, 
		RULE_createFile = 24, RULE_deleteFileDirectory = 25, RULE_transferFileDirectory = 26, 
		RULE_producerConsumerModel = 27, RULE_producer = 28, RULE_consumer = 29, 
		RULE_pushJson = 30, RULE_mapJsonContext = 31, RULE_sharePoint = 32, RULE_expression = 33, 
		RULE_log = 34, RULE_exception = 35, RULE_resource = 36, RULE_json = 37, 
		RULE_obj = 38, RULE_pair = 39, RULE_arr = 40, RULE_jValue = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"process", "tryClause", "finallyClause", "catchClause", "action", "multitude", 
			"copyData", "transform", "loadCsv", "abort", "callProcess", "forkProcess", 
			"spawnProcess", "dogLeg", "startProcess", "assign", "dropFile", "restApi", 
			"restPart", "exportCsv", "importCsvToDB", "extractTAR", "createTAR", 
			"createDirectory", "createFile", "deleteFileDirectory", "transferFileDirectory", 
			"producerConsumerModel", "producer", "consumer", "pushJson", "mapJsonContext", 
			"sharePoint", "expression", "log", "exception", "resource", "json", "obj", 
			"pair", "arr", "jValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'process'", "'{'", "'}'", "'try'", "'finally'", "'catch'", "'multitude'", 
			"'as'", "'on'", "'using'", "'on-condition'", "'fielding'", "'copydata'", 
			"'from'", "'to'", "'with-fetch-batch-size'", "'with-write-batch-size'", 
			"'transform'", "'do-format'", "'loadcsv'", "'pid'", "'with'", "'by-batch'", 
			"'abort'", "'callprocess'", "'with-target'", "'from-file'", "'for-every'", 
			"'on-parallel-fielding'", "'forkprocess'", "'watermark'", "'spawn'", 
			"'dogleg'", "'use-parent-context'", "'start-process'", "'with-file'", 
			"'assign'", "'source'", "'dropfile'", "'in-path'", "'restapi'", "'url'", 
			"'method'", "'with headers'", "'with params'", "'with body type'", "'{ part'", 
			"'type as'", "'exportCsv'", "'executionSource'", "'targetLocation'", 
			"'importCsvToDB'", "'target'", "'batch'", "'extractTAR'", "'destination'", 
			"'createTAR'", "'extension'", "'createDirectory'", "'createFile'", "'location'", 
			"'fileName'", "'deleteFileDirectory'", "'transferFileDirectory'", "'operation'", 
			"'pcm'", "'on-resource'", "'produce'", "'consume'", "'producer'", "'push-result-at'", 
			"'execute'", "'consumer'", "'pop-event-from'", "'pop-result-from'", "'limit'", 
			"'on-standalone'", "'push-json-into-context'", "'with-key'", "'using-value'", 
			"'map-json-into-context'", "'sharepoint'", "'client-id'", "'tenant-id'", 
			"'client-secret'", "'org-name'", "'action-type'", "'site-url'", "'source-relative-path'", 
			"'file-name'", "'target-relative-path'", "'if'", "'log'", "'level'", 
			"'message'", "'raise exception'", "','", "':'", "'['", "']'", "'true'", 
			"'false'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "NON_ZERO_DIGIT", "STRING", 
			"CRLF", "Operator", "WS", "COMMENT", "LINE_COMMENT", "NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Raven.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RavenParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProcessContext extends ParserRuleContext {
		public Token name;
		public TryClauseContext tryBlock;
		public CatchClauseContext catchBlock;
		public FinallyClauseContext finallyBlock;
		public TerminalNode STRING() { return getToken(RavenParser.STRING, 0); }
		public TryClauseContext tryClause() {
			return getRuleContext(TryClauseContext.class,0);
		}
		public CatchClauseContext catchClause() {
			return getRuleContext(CatchClauseContext.class,0);
		}
		public FinallyClauseContext finallyClause() {
			return getRuleContext(FinallyClauseContext.class,0);
		}
		public ProcessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).enterProcess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).exitProcess(this);
		}
	}

	public final ProcessContext process() throws RecognitionException {
		ProcessContext _localctx = new ProcessContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_process);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__0);
			setState(85);
			((ProcessContext)_localctx).name = match(STRING);
			setState(86);
			match(T__1);
			setState(87);
			((ProcessContext)_localctx).tryBlock = tryClause();
			setState(88);
			((ProcessContext)_localctx).catchBlock = catchClause();
			setState(89);
			((ProcessContext)_localctx).finallyBlock = finallyClause();
			setState(90);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TryClauseContext extends ParserRuleContext {
		public ActionContext action;
		public List<ActionContext> actions = new ArrayList<ActionContext>();
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public TryClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tryClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).enterTryClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).exitTryClause(this);
		}
	}

	public final TryClauseContext tryClause() throws RecognitionException {
		TryClauseContext _localctx = new TryClauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tryClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__3);
			setState(93);
			match(T__1);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__12) | (1L << T__17) | (1L << T__19) | (1L << T__23) | (1L << T__24) | (1L << T__29) | (1L << T__31) | (1L << T__32) | (1L << T__36) | (1L << T__38) | (1L << T__40) | (1L << T__48) | (1L << T__51) | (1L << T__54) | (1L << T__56) | (1L << T__58) | (1L << T__59) | (1L << T__62))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (T__63 - 64)) | (1L << (T__65 - 64)) | (1L << (T__69 - 64)) | (1L << (T__72 - 64)) | (1L << (T__77 - 64)) | (1L << (T__80 - 64)) | (1L << (T__81 - 64)))) != 0)) {
				{
				{
				setState(94);
				((TryClauseContext)_localctx).action = action();
				((TryClauseContext)_localctx).actions.add(((TryClauseContext)_localctx).action);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FinallyClauseContext extends ParserRuleContext {
		public ActionContext action;
		public List<ActionContext> actions = new ArrayList<ActionContext>();
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public FinallyClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_finallyClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).enterFinallyClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).exitFinallyClause(this);
		}
	}

	public final FinallyClauseContext finallyClause() throws RecognitionException {
		FinallyClauseContext _localctx = new FinallyClauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_finallyClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__4);
			setState(103);
			match(T__1);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__12) | (1L << T__17) | (1L << T__19) | (1L << T__23) | (1L << T__24) | (1L << T__29) | (1L << T__31) | (1L << T__32) | (1L << T__36) | (1L << T__38) | (1L << T__40) | (1L << T__48) | (1L << T__51) | (1L << T__54) | (1L << T__56) | (1L << T__58) | (1L << T__59) | (1L << T__62))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (T__63 - 64)) | (1L << (T__65 - 64)) | (1L << (T__69 - 64)) | (1L << (T__72 - 64)) | (1L << (T__77 - 64)) | (1L << (T__80 - 64)) | (1L << (T__81 - 64)))) != 0)) {
				{
				{
				setState(104);
				((FinallyClauseContext)_localctx).action = action();
				((FinallyClauseContext)_localctx).actions.add(((FinallyClauseContext)_localctx).action);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CatchClauseContext extends ParserRuleContext {
		public ActionContext action;
		public List<ActionContext> actions = new ArrayList<ActionContext>();
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public CatchClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_catchClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).enterCatchClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).exitCatchClause(this);
		}
	}

	public final CatchClauseContext catchClause() throws RecognitionException {
		CatchClauseContext _localctx = new CatchClauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_catchClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__5);
			setState(113);
			match(T__1);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__12) | (1L << T__17) | (1L << T__19) | (1L << T__23) | (1L << T__24) | (1L << T__29) | (1L << T__31) | (1L << T__32) | (1L << T__36) | (1L << T__38) | (1L << T__40) | (1L << T__48) | (1L << T__51) | (1L << T__54) | (1L << T__56) | (1L << T__58) | (1L << T__59) | (1L << T__62))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (T__63 - 64)) | (1L << (T__65 - 64)) | (1L << (T__69 - 64)) | (1L << (T__72 - 64)) | (1L << (T__77 - 64)) | (1L << (T__80 - 64)) | (1L << (T__81 - 64)))) != 0)) {
				{
				{
				setState(114);
				((CatchClauseContext)_localctx).action = action();
				((CatchClauseContext)_localctx).actions.add(((CatchClauseContext)_localctx).action);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public AbortContext abort() {
			return getRuleContext(AbortContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public CallProcessContext callProcess() {
			return getRuleContext(CallProcessContext.class,0);
		}
		public ForkProcessContext forkProcess() {
			return getRuleContext(ForkProcessContext.class,0);
		}
		public SpawnProcessContext spawnProcess() {
			return getRuleContext(SpawnProcessContext.class,0);
		}
		public DogLegContext dogLeg() {
			return getRuleContext(DogLegContext.class,0);
		}
		public CopyDataContext copyData() {
			return getRuleContext(CopyDataContext.class,0);
		}
		public DropFileContext dropFile() {
			return getRuleContext(DropFileContext.class,0);
		}
		public LoadCsvContext loadCsv() {
			return getRuleContext(LoadCsvContext.class,0);
		}
		public RestApiContext restApi() {
			return getRuleContext(RestApiContext.class,0);
		}
		public TransformContext transform() {
			return getRuleContext(TransformContext.class,0);
		}
		public MultitudeContext multitude() {
			return getRuleContext(MultitudeContext.class,0);
		}
		public ExportCsvContext exportCsv() {
			return getRuleContext(ExportCsvContext.class,0);
		}
		public CreateDirectoryContext createDirectory() {
			return getRuleContext(CreateDirectoryContext.class,0);
		}
		public CreateFileContext createFile() {
			return getRuleContext(CreateFileContext.class,0);
		}
		public DeleteFileDirectoryContext deleteFileDirectory() {
			return getRuleContext(DeleteFileDirectoryContext.class,0);
		}
		public TransferFileDirectoryContext transferFileDirectory() {
			return getRuleContext(TransferFileDirectoryContext.class,0);
		}
		public CreateTARContext createTAR() {
			return getRuleContext(CreateTARContext.class,0);
		}
		public ExtractTARContext extractTAR() {
			return getRuleContext(ExtractTARContext.class,0);
		}
		public ImportCsvToDBContext importCsvToDB() {
			return getRuleContext(ImportCsvToDBContext.class,0);
		}
		public ProducerConsumerModelContext producerConsumerModel() {
			return getRuleContext(ProducerConsumerModelContext.class,0);
		}
		public ProducerContext producer() {
			return getRuleContext(ProducerContext.class,0);
		}
		public ConsumerContext consumer() {
			return getRuleContext(ConsumerContext.class,0);
		}
		public PushJsonContext pushJson() {
			return getRuleContext(PushJsonContext.class,0);
		}
		public MapJsonContextContext mapJsonContext() {
			return getRuleContext(MapJsonContextContext.class,0);
		}
		public SharePointContext sharePoint() {
			return getRuleContext(SharePointContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_action);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__23:
				{
				setState(122);
				abort();
				}
				break;
			case T__36:
				{
				setState(123);
				assign();
				}
				break;
			case T__24:
				{
				setState(124);
				callProcess();
				}
				break;
			case T__29:
				{
				setState(125);
				forkProcess();
				}
				break;
			case T__31:
				{
				setState(126);
				spawnProcess();
				}
				break;
			case T__32:
				{
				setState(127);
				dogLeg();
				}
				break;
			case T__12:
				{
				setState(128);
				copyData();
				}
				break;
			case T__38:
				{
				setState(129);
				dropFile();
				}
				break;
			case T__19:
				{
				setState(130);
				loadCsv();
				}
				break;
			case T__40:
				{
				setState(131);
				restApi();
				}
				break;
			case T__17:
				{
				setState(132);
				transform();
				}
				break;
			case T__6:
				{
				setState(133);
				multitude();
				}
				break;
			case T__48:
				{
				setState(134);
				exportCsv();
				}
				break;
			case T__58:
				{
				setState(135);
				createDirectory();
				}
				break;
			case T__59:
				{
				setState(136);
				createFile();
				}
				break;
			case T__62:
				{
				setState(137);
				deleteFileDirectory();
				}
				break;
			case T__63:
				{
				setState(138);
				transferFileDirectory();
				}
				break;
			case T__56:
				{
				setState(139);
				createTAR();
				}
				break;
			case T__54:
				{
				setState(140);
				extractTAR();
				}
				break;
			case T__51:
				{
				setState(141);
				importCsvToDB();
				}
				break;
			case T__65:
				{
				setState(142);
				producerConsumerModel();
				}
				break;
			case T__69:
				{
				setState(143);
				producer();
				}
				break;
			case T__72:
				{
				setState(144);
				consumer();
				}
				break;
			case T__77:
				{
				setState(145);
				pushJson();
				}
				break;
			case T__80:
				{
				setState(146);
				mapJsonContext();
				}
				break;
			case T__81:
				{
				setState(147);
				sharePoint();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultitudeContext extends ParserRuleContext {
		public Token name;
		public Token on;
		public ActionContext action;
		public List<ActionContext> actions = new ArrayList<ActionContext>();
		public ExpressionContext condition;
		public Token writeThreadCount;
		public List<TerminalNode> STRING() { return getTokens(RavenParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(RavenParser.STRING, i);
		}
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> NON_ZERO_DIGIT() { return getTokens(RavenParser.NON_ZERO_DIGIT); }
		public TerminalNode NON_ZERO_DIGIT(int i) {
			return getToken(RavenParser.NON_ZERO_DIGIT, i);
		}
		public MultitudeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multitude; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).enterMultitude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RavenListener ) ((RavenListener)listener).exitMultitude(this);
		}
	}
